# workon

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/init/: mod.rs  workon.fish  workon.zsh
