[package]
name = "workon-rs"
version = "0.1.0"
authors = ["zhaolei <im.zhaolei@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "workon-core"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
serde_json = "1.0.61"
dirs = "3.0.1"
